# imgDesignCopy

./: .eslintrc.cjs  .gitignore  DESIGN_LANGUAGE.md  PRIVACY.md  README.md  imgPrompt.json  manifest.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: website-ci.yml  website-image.yml
.omc/: project-memory.json
.omc/plans/: 2026-04-13-img2prompt-chrome-mvp.md  2026-04-13-img2prompt-v1.1-progress-and-modes.md  2026-04-14-native-hud-drawer.md  2026-04-15-promptlens-website.md
apps/chrome/: manifest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.omc/state/: idle-notif-cooldown.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/.omc/state/: idle-notif-cooldown.json
apps/desktop/src-tauri/src/: capture.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/native/: macos.rs  mod.rs  windows.rs
apps/website/: .dockerignore  .env.example  Dockerfile  README.md  i18n.ts  lighthouserc.json  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo
deploy/: .env.example  Caddyfile  README.md  build-and-ship.sh  docker-compose.yml
e2e/: config.spec.ts  loads.spec.ts
scripts/: normalize-screenshots.mjs  pack-chrome.sh  pack-desktop.sh  pack.sh
store-assets/: DESCRIPTIONS.md  FILL-THIS.md  README.md
(+335 files in other folders)
