[package]
name = "promptlens-desktop"
version = "0.1.0"
edition = "2021"
description = "PromptLens Tauri desktop app"

[lib]
name = "promptlens_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.7"
image = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[features]
default = ["native-hud"]
native-hud = []
